[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Phạm Hoàng"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.45.2"
together = "^1.3.3"
langgraph = "^0.2.39"
langsmith = "^0.1.136"
python-dotenv = "^1.0.1"
tenacity = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
