[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Phạm Hoàng"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.45.2"
langgraph = "^0.2.39"
langsmith = "^0.1.136"
python-dotenv = "^1.0.1"
tenacity = "^9.0.0"
openai = "^1.52.0"
jinja2 = "^3.1.4"
torch = "^2.5.0"
ipython = "^8.28.0"
pillow = "^11.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
